# orbs-cli

./: .gitignore  ANDROID_SETUP.md  DEPENDENCY_VERIFICATION.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test_appium_connection.py  test_manual_appium.py
docs/: api-testing.md  architecture.md  cli-reference.md  environments.md  mobile-testing.md  philosophy.md  spy.md  web-testing.md
orbs/: __init__.py  _constant.py  api_client.py  api_server.py  browser_factory.py  cli.py  config.py  dependency.py  exception.py  guard.py  listener_manager.py  log.py  mobile_factory.py  report_generator.py  report_listener.py  runner.py  thread_context.py  utils.py
orbs/keyword/: __init__.py  locator.py  mobile.py  web.py
orbs/spy/: __init__.py  base.py  mobile.py  web.py
orbs/spy/js/: web_spy_listener.js
orbs/templates/jinja/listeners/: listener.py.j2
orbs/templates/jinja/object_repository/: WebElementEntity.xml.j2
orbs/templates/jinja/steps/: step.py.j2
orbs/templates/jinja/testcases/: testcase.py.j2
orbs/templates/jinja/testsuite_collections/: testsuite_collection.yml.j2
orbs/templates/jinja/testsuites/: testsuite.yml.j2
orbs/templates/project/: .dockerignore  .gitignore  Dockerfile  README.md
orbs/templates/project/environments/: default.yml  dev.yml  prod.yml  staging.yml  uat.yml
orbs/templates/project/settings/: browser.properties  platform.properties
settings/: platform.properties
tests/: debug_props.py  test_case_insensitive.py  test_environment_config.py  test_report_generator.py  test_stacktrace_report.py
(+3 files in other folders)
